<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daily Budget</string>
    <string name="no_budgets">Looks like you don\'t have any budgets set up.</string>
    <string name="new_budget">Create New Budget</string>
    <string name="edit_budget">Edit Budget</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="duration_in_days">Duration in Days</string>
    <string name="amount_per_period">Amount per Period</string>
    <string name="save">Save</string>
    <string name="no_transactions">Looks like haven\'t made any transactions under this budget.</string>
    <string name="amount">Myself</string>
    <string name="amount_other">Others</string>
    <string name="date">Date</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="cancel">Cancel</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="save_changes">Save Changes</string>
    <string name="unsaved_changes_message">Your budget {0} has unsaved changes. Would you like to save them?</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="delete">Delete</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="amount_descriptive">Amount\n(Negative to Increase Budget)</string>
    <string name="view_transactions">View Transactions</string>
    <string name="transaction_description">Transaction Description</string>
    <string name="budget_name">Budget Name</string>
    <string name="paid_for_someone">Paid for Someone</string>
    <string name="budget_stats">Budget Stats</string>

</resources>
