<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/amount_descriptive" />

    <EditText
        android:id="@+id/fragment_edit_transaction_edittext_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        tools:text="5.31" />

    <DatePicker
        android:id="@+id/fragment_edit_transaction_datepicker_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:spinnersShown="true" />

    <Button
        android:id="@+id/fragment_edit_transaction_button_add_transaction"
        style="@style/Button.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:width="180dp"
        android:text="@string/add_transaction" />

    <Button
        android:id="@+id/fragment_edit_transaction_button_delete_transaction"
        style="@style/Button.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:width="180dp"
        android:text="@string/delete_transaction"
        android:visibility="gone" />

</LinearLayout>